feat(C13): Add interaction

--- a/13-🅱️-lizhi-zhuangbi/LiZhiZhuangbi/LiZhiZhuangbi/Info.plist
+++ b/13-🅱️-lizhi-zhuangbi/LiZhiZhuangbi/LiZhiZhuangbi/Info.plist
@@ -56,5 +56,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SourceHanSerifSC-Heavy.otf</string>
+	</array>
 </dict>
 </plist>
